# archmage

./: .gitignore  LICENSE  Makefile  README.md  archmage  archmage.ml  azurlisp.cabal  cyx.cabal  dune-project  makefile  neodelta.cabal
example/: test.cyx  test.nd
examples/: foo.lizp  temp.cyx  test.lizp
src/: Comp.hs  Core.hs  Env.hs  Environment.hs  Eval.hs  Evaluate.hs  Main.hs  Model.hs  Parse.hs  Read.hs  Types.hs  comp.ml  dune  eval.ml  main.ml  types.ml
std/: core.cyx
