cabal-version:      3.0
name:               azurlisp
version:            0.1.0
synopsis:           azur's lisp

-- description:
homepage:           https://github.com/azur1s/azurlisp

-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Natapat Samutpong
maintainer:         natapat.samutpong@gmail.com

-- copyright:
category:           Language
extra-source-files: README.md

executable azurlisp
    main-is:          Main.hs

    other-modules:
        Types,
        Parse,
        Env,
        Eval,
        Core,

    other-extensions:
        OverloadedStrings,
        LambdaCase,

    build-depends:
        base,
        -- Parse
        text,
        megaparsec,
        -- Eval
        containers,
        mtl,
        transformers,
        directory,
        filepath,

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-name-shadowing
                      -XOverloadedStrings
                      -XLambdaCase
