cabal-version:      3.0
name:               cyx
version:            0.1.0
synopsis:           cyx programming language

-- A longer description of the package.
-- description:
homepage:           https://github.com/azur1s/cyx

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Natapat Samutpong
maintainer:         natapat.samutpong@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: README.md

executable cyx
    main-is:          Main.hs

    other-modules:
        Core,
        Environment,
        Evaluate,
        Parse,
        Read,
        Types,

    other-extensions:
        OverloadedStrings,
        LambdaCase,

    build-depends:
        base,
        -- Parse
        text,
        megaparsec,
        -- Eval
        containers,
        mtl,
        transformers,
        -- Repl
        directory,
        readline,

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-name-shadowing
                      -XOverloadedStrings
                      -XLambdaCase
